--- a/package.json
+++ b/package.json
@@ -6,8 +6,6 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
-    "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
     "test": "tsc && wtr --coverage",
     "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\"",
     "analyze": "cem analyze --litelement",
@@ -15,45 +13,33 @@
     "build": "rollup -c"
   },
   "dependencies": {
-    "@vaadin/router": "^1.7.5",
-    "lit": "^2.0.2"
+    "@vaadin/router": "^2.0.0",
+    "lit": "^3.3.0"
   },
   "devDependencies": {
-    "@custom-elements-manifest/analyzer": "^0.4.17",
-    "@open-wc/eslint-config": "^9.2.1",
-    "@open-wc/testing": "^3.1.6",
-    "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-typescript": "^11.1.5",
-    "@typescript-eslint/eslint-plugin": "^5.48.0",
-    "@typescript-eslint/parser": "^5.48.0",
-    "@web/dev-server": "^0.1.34",
-    "@web/test-runner": "^0.14.0",
-    "concurrently": "^5.3.0",
+    "@custom-elements-manifest/analyzer": "^0.10.4",
+    "@open-wc/testing": "^4.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.2",
+    "@web/dev-server": "^0.4.6",
+    "@web/test-runner": "^0.20.2",
+    "concurrently": "^9.1.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.3.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.4",
-    "prettier": "^2.4.1",
-    "rollup": "^4.9.1",
+    "husky": "^9.1.7",
+    "rollup": "^4.41.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-css-only": "^4.5.2",
-    "rollup-plugin-lit-css": "^4.0.1",
+    "rollup-plugin-lit-css": "^5.0.2",
     "rollup-plugin-livereload": "^2.0.5",
-    "rollup-plugin-serve": "^1.1.1",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "tslib": "^2.3.1",
-    "typescript": "^4.9.5"
+    "rollup-plugin-serve": "^3.0.0",
+    "sass": "^1.89.1",
+    "sass-loader": "^16.0.5",
+    "tslib": "^2.8.1",
+    "typescript": "^5.8.3"
   },
   "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
     "extends": [
-      "@open-wc",
-      "prettier"
-    ],
-    "plugins": [
-      "@typescript-eslint"
+      "@open-wc"
     ],
     "rules": {
       "no-unused-vars": "off",
@@ -69,21 +55,6 @@
         }
       ]
     }
-  },
-  "prettier": {
-    "singleQuote": true,
-    "arrowParens": "avoid"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.ts": [
-      "eslint --fix",
-      "prettier --write"
-    ]
   },
   "customElements": "custom-elements.json"
 }
